tests/fixtures/valid/ignored/builtins/hasattr.py
# Valid hasattr() calls
# Auto-generated by scripts/generate_tests.py

b0_hasattr_int_str = hasattr(1, "hello")
b1_hasattr_float_str = hasattr(1.0, "hello")
b2_hasattr_bool_str = hasattr(True, "hello")
b3_hasattr_str_str = hasattr("hello", "hello")
b4_hasattr_bytes_str = hasattr(b"hello", "hello")
b5_hasattr_list_str = hasattr([1, 2, 3], "hello")
b6_hasattr_dict_str = hasattr({"a": 1}, "hello")
b7_hasattr_set_str = hasattr({1, 2, 3}, "hello")
b8_hasattr_none_str = hasattr(None, "hello")

print("hasattr() tests passed!")
